# mcp-server-spec-python

./: .gitignore  DEPLOYMENT_GUIDE.md  DEVELOPMENT.md  MCP_CLIENT_CONFIGURATION.md  Makefile  README.md  SETUP.md  pyproject.toml  requirements.txt  test_mcp_server.py  test_syntax.py
examples/: basic_usage.py  client_configuration_example.py  workflow_example.md
src/: __init__.py  http_server.py  main.py  server.py
src/mcp_server_spec/: __init__.py  connection_manager.py  enhanced_http_stream.py  http_stream.py  main.py  models.py  prompts.py  server.py
tests/: test_server.py
