[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-spec-driven-development-python"
version = "0.1.0"
description = "Spec-Driven Development MCP Server (Python Implementation)"
authors = [
    {name = "Jun Han", email = "jun.han@example.com"},
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["mcp", "model-context-protocol", "spec-driven-development"]
dependencies = [
    "mcp>=1.4.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
]

[project.scripts]
mcp-server-spec-python = "mcp_server_spec_python.main:main"

[project.urls]
Homepage = "https://github.com/formulahendry/mcp-server-spec-driven-development-python"
Repository = "https://github.com/formulahendry/mcp-server-spec-driven-development-python.git"
Issues = "https://github.com/formulahendry/mcp-server-spec-driven-development-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_server_spec_python"]

[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
asyncio_mode = "auto"